--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+body {
+    color: white;
+    background-image: url("https://images.alphacoders.com/220/220983.jpg");
+}
+
 #question_div {
     display: none;
 }
