--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     color: white;
-    background-image: url("https://images.alphacoders.com/220/220983.jpg");
+    background-image: url("https://media.cntraveler.com/photos/571848d845342aa9548fb797/16:9/w_2240,c_limit/game-of-thrones-red-keep-cr-hbo.jpg");
 }
 
 #question_div {
